[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/World/Player_Character/Player_Character.gd" type="Script" id=1]
[ext_resource path="res://Game/World/Player_Character/Fadenkreuz/Fadenkreuz.png" type="Texture" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.45

[sub_resource type="CapsuleShape" id=2]
radius = 0.45

[node name="Character" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 256, 0 )
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
far = 70.0

[node name="Ground_Mesh_RayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="Select_Marker_RayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 2

[node name="TextureRect" type="TextureRect" parent="Head/Camera"]
margin_left = 437.0
margin_top = 225.0
margin_right = 587.0
margin_bottom = 375.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_x" type="Label" parent="Head/Camera"]
margin_right = 100.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_y" type="Label" parent="Head/Camera"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_z" type="Label" parent="Head/Camera"]
margin_top = 80.0
margin_right = 100.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Player_Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )
